2022-01-25 Se agrega doble validación a polizas manuales

--- a/CódigoFuente/BitacorasProduccion/Views/Home/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Home/Index.cshtml
@@ -72,7 +72,7 @@
                     <div class="x_content">
                         <div class="bs-example" data-example-id="simple-jumbotron">
                             <p>
-                                Los valores más importantes en thyssenkrupp Materials de México deben permitir el desarrollo lleno del potencial de nuestros empleados y mantener un buen ambiente de trabajo poniendo énfasis en: INTEGRIDAD, LEALTAD y HONESTIDAD.
+                                Los valores más importantes en thyssenkrupp Materials de México deben permitir el desarrollo lleno del potencial de nuestros empleados y mantener un buen ambiente de trabajo poniendo énfasis en: SINCERIDAD, INTEGRIDAD, FIABILIDAD y CREDIBILIDAD.
                             </p>
                         </div>
                     </div>
