--- a/CódigoFuente/BitacorasProduccion/Views/InspeccionRegistros/RegistroPiezasDescarte.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/InspeccionRegistros/RegistroPiezasDescarte.cshtml
@@ -122,6 +122,8 @@
                                         <dd class="col-sm-2">@Html.DisplayFor(model => model.Class_asociado.Customer_part_number)</dd>
                                         <dt class="col-sm-2">Material</dt>
                                         <dd class="col-sm-2">@Html.DisplayFor(model => model.MM_asociado.Type_of_Material)</dd>
+                                        <dt class="col-sm-2">Peso Neto Unitario</dt>
+                                        <dd class="col-sm-2">@Html.DisplayFor(model => model.produccion_datos_entrada.peso_real_pieza_neto)</dd>
                                     </dl>
                                 </div>
                             </div>
