--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_LoginPartial.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_LoginPartial.cshtml
@@ -30,7 +30,7 @@
                 }
                 else
                 {
-                    <li>@Html.ActionLink("Iniciar Sesión", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink", @class = "btn btn-outline-success my-2 my-sm-0" })</li>
+                    <li>@Html.ActionLink("Iniciar Sesión", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink", @class = "btn btn-success my-2 my-sm-0" })</li>
                 }
 
             </ul>
